Test/typing/should_fail/methods_abstract_final.java
package tutu.titi.toto;

class A {

    abstract final void myMethod(){}

}